--- a/p2-1-function-def.ipynb
+++ b/p2-1-function-def.ipynb
@@ -32,11 +32,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "def do_nothing():\n",
+    "    pass\n",
+    "\n",
+    "do_nothing()"
    ]
   },
   {
@@ -60,11 +63,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['False',\n",
+       " 'None',\n",
+       " 'True',\n",
+       " 'and',\n",
+       " 'as',\n",
+       " 'assert',\n",
+       " 'async',\n",
+       " 'await',\n",
+       " 'break',\n",
+       " 'class',\n",
+       " 'continue',\n",
+       " 'def',\n",
+       " 'del',\n",
+       " 'elif',\n",
+       " 'else',\n",
+       " 'except',\n",
+       " 'finally',\n",
+       " 'for',\n",
+       " 'from',\n",
+       " 'global',\n",
+       " 'if',\n",
+       " 'import',\n",
+       " 'in',\n",
+       " 'is',\n",
+       " 'lambda',\n",
+       " 'nonlocal',\n",
+       " 'not',\n",
+       " 'or',\n",
+       " 'pass',\n",
+       " 'raise',\n",
+       " 'return',\n",
+       " 'try',\n",
+       " 'while',\n",
+       " 'with',\n",
+       " 'yield']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "import keyword\n",
+    "keyword.kwlist"
    ]
   },
   {
@@ -103,11 +152,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "exit, bye\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "def exit_info():\n",
+    "    print('exit, bye')\n",
+    "    \n",
+    "exit_info()"
    ]
   },
   {
@@ -126,11 +186,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2000\n",
+      "2004\n",
+      "2008\n",
+      "2012\n",
+      "2016\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "def leap_years(begin, end):\n",
+    "#  a leap year not only if it is divisible by 4 -- it also has to be divisible by 400 if it is a centurial year. So 1700, 1800 and 1900 were not leap years, but 2000 was.\n",
+    "    for year in range(begin, end):\n",
+    "        if (year%4 == 0 and year%100 != 0) or year%400 == 0:\n",
+    "            print(year)\n",
+    "\n",
+    "leap_years(2000,2020)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "20%5"
    ]
   },
   {
@@ -160,11 +258,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "bool(None)"
    ]
   },
   {
@@ -185,11 +294,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 1\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "def idiv(a,b):\n",
+    "    x = a // b\n",
+    "    y = a % b\n",
+    "    return x, y\n",
+    "x, y = idiv(5,2)\n",
+    "print(x,y)"
    ]
   },
   {
@@ -215,11 +337,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "2\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "def increase_one(n):\n",
+    "    n+= 1\n",
+    "    return n\n",
+    "\n",
+    "n=2\n",
+    "print(increase_one(n))\n",
+    "print(n)"
    ]
   },
   {
@@ -276,29 +413,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "def Greeting(name, msg='Hi'):\n",
+    "    print(f'{msg},{name}')\n",
+    "          "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi,Yi\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "Greeting('Yi')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "good morning,Yi\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "Greeting('Yi', msg=\"good morning\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "good morning,Yi\n"
+     ]
+    }
+   ],
+   "source": [
+    "Greeting('Yi', \"good morning\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "non-default argument follows default argument (<ipython-input-32-702e324b3ff3>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-32-702e324b3ff3>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    def Greeting(msg='Hi', name):\u001b[0m\n\u001b[0m                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m non-default argument follows default argument\n"
+     ]
+    }
+   ],
+   "source": [
+    "def Greeting(msg='Hi', name):\n",
+    "    print(f'{msg},{name}')\n",
+    "          "
    ]
   },
   {
@@ -326,11 +518,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi,Yi,!\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "def Greeting2(name, msg='Hi', puct='.'):\n",
+    "    print(f'{msg},{name},{puct}')\n",
+    "Greeting2('Yi', puct='!')"
    ]
   },
   {
@@ -342,11 +544,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello,Yi,!\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "Greeting2('Yi', puct='!', msg='Hello')"
    ]
   },
   {
@@ -364,11 +574,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "positional argument follows keyword argument (<ipython-input-35-32de9516ae82>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-35-32de9516ae82>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    Greeting2(puct='!','Yi', msg='Hello')\u001b[0m\n\u001b[0m                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m positional argument follows keyword argument\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "Greeting2(puct='!','Yi', msg='Hello')"
    ]
   },
   {
@@ -389,29 +608,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "def Greeting3(*names):\n",
+    "    for name in names:\n",
+    "        print(f'hello {name}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello Yi\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "Greeting3('Yi')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello Yi\n",
+      "hello Tutu\n",
+      "hello Amei\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "Greeting3('Yi', 'Tutu', 'Amei')"
    ]
   },
   {
@@ -453,20 +692,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "def Greeting4(*names, msg='Hi', puc='.'):\n",
+    "    for i in names:\n",
+    "        print(f'{msg}, {i}{puc}')\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi, Yi!\n",
+      "Hi, Tutu!\n",
+      "Hi, Meitu!\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "Greeting4('Yi', 'Tutu', 'Meitu', puc = '!')"
    ]
   },
   {
