--- a/p2-2-docstrings.ipynb
+++ b/p2-2-docstrings.ipynb
@@ -46,29 +46,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "from math import sqrt \n",
+    "\n",
+    "def is_prime(n):\n",
+    "    \"\"\"this is a function to determine if the input # is a prime\"\"\"\n",
+    "    if n < 2:\n",
+    "        return False\n",
+    "    if n in (2,3):\n",
+    "        return True\n",
+    "    for i in range(2, int(sqrt(n))+1):\n",
+    "        if n % i==0:\n",
+    "            return False\n",
+    "        else:\n",
+    "            return True\n",
+    "        \n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "int(sqrt(5))+1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "is_prime(13)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function is_prime in module __main__:\n",
+      "\n",
+      "is_prime(n)\n",
+      "    this is a function to determine if the input # is a prime\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(is_prime)    #-------------------------------------------------------------there is no () in function name"
    ]
   },
   {
@@ -80,11 +139,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'this is a function to determine if the input # is a prime'"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "is_prime.__doc__       #---------------------------------------------------------there is no () in function name"
    ]
   },
   {
