--- a/p2-3-modules.ipynb
+++ b/p2-3-modules.ipynb
@@ -45,11 +45,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "from math import sqrt\n",
+    "\n",
+    "def is_prime2(n):\n",
+    "    \"\"\"to judge if it is a prime number\"\"\"\n",
+    "    if n < 2:\n",
+    "        return False\n",
+    "    if n in (2,3):\n",
+    "        return True\n",
+    "    for i in range(2, int(sqrt(n)+1)):\n",
+    "        if n % i == 0:\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
+    "def say_Hi2(*names, greeting='Hi', capital = False):\n",
+    "    \"\"\" to print greeting to peoples\n",
+    "    :para *name: a tuple of people \n",
+    "    :para greeting: say Hi by default \n",
+    "    :para Capital to name\n",
+    "    :return: return none\n",
+    "    \"\"\"\n",
+    "    for name in names:\n",
+    "        if capital:\n",
+    "            name=name.capitalize(name)   #-----------------------------name.capitalize(), not capitalize(name)\n",
+    "        print(f'{greeting}, {name}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi, Yi\n",
+      "Hi, Tuu\n"
+     ]
+    }
+   ],
+   "source": [
+    "say_Hi('Yi','Tuu')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "is_prime2(5)"
    ]
   },
   {
@@ -68,11 +129,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['/Users/yizou/Code/pilot-student',\n",
+       " '/Users/yizou/opt/anaconda3/lib/python37.zip',\n",
+       " '/Users/yizou/opt/anaconda3/lib/python3.7',\n",
+       " '/Users/yizou/opt/anaconda3/lib/python3.7/lib-dynload',\n",
+       " '',\n",
+       " '/Users/yizou/opt/anaconda3/lib/python3.7/site-packages',\n",
+       " '/Users/yizou/opt/anaconda3/lib/python3.7/site-packages/aeosa',\n",
+       " '/Users/yizou/opt/anaconda3/lib/python3.7/site-packages/IPython/extensions',\n",
+       " '/Users/yizou/.ipython',\n",
+       " './assets/']"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "import sys\n",
+    "sys.path"
    ]
   },
   {
@@ -93,11 +175,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "sys.path.append('./assets/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['/Users/yizou/Code/pilot-student',\n",
+       " '/Users/yizou/opt/anaconda3/lib/python37.zip',\n",
+       " '/Users/yizou/opt/anaconda3/lib/python3.7',\n",
+       " '/Users/yizou/opt/anaconda3/lib/python3.7/lib-dynload',\n",
+       " '',\n",
+       " '/Users/yizou/opt/anaconda3/lib/python3.7/site-packages',\n",
+       " '/Users/yizou/opt/anaconda3/lib/python3.7/site-packages/aeosa',\n",
+       " '/Users/yizou/opt/anaconda3/lib/python3.7/site-packages/IPython/extensions',\n",
+       " '/Users/yizou/.ipython',\n",
+       " './assets/',\n",
+       " './assets/',\n",
+       " './assets/']"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sys.path"
    ]
   },
   {
@@ -109,20 +222,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi, Yi!\n",
+      "Hi, Tu!\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "import testmodule #----------if you save .py from Jupyter notebook, it contains other information, will cause error when you import module\n",
+    "testmodule.say_hi('Yi', 'Tu')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "from testmodule import is_prime\n",
+    "#----------if you save .py from Jupyter notebook, it contains other information, will cause error when you import module\n",
+    "is_prime(5)"
    ]
   },
   {
@@ -244,20 +380,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "from myutil import is_prime as isp\n",
+    "isp(7)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "import myutil as my\n",
+    "my.is_prime(8)"
    ]
   },
   {
@@ -276,11 +436,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('_abc',\n",
+       " '_ast',\n",
+       " '_codecs',\n",
+       " '_collections',\n",
+       " '_functools',\n",
+       " '_imp',\n",
+       " '_io',\n",
+       " '_locale',\n",
+       " '_operator',\n",
+       " '_signal',\n",
+       " '_sre',\n",
+       " '_stat',\n",
+       " '_string',\n",
+       " '_symtable',\n",
+       " '_thread',\n",
+       " '_tracemalloc',\n",
+       " '_warnings',\n",
+       " '_weakref',\n",
+       " 'atexit',\n",
+       " 'builtins',\n",
+       " 'errno',\n",
+       " 'faulthandler',\n",
+       " 'gc',\n",
+       " 'itertools',\n",
+       " 'marshal',\n",
+       " 'posix',\n",
+       " 'pwd',\n",
+       " 'sys',\n",
+       " 'time',\n",
+       " 'xxsubtype',\n",
+       " 'zipimport')"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "sys.builtin_module_names  #-------built in module"
    ]
   },
   {
@@ -308,11 +509,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Zen of Python, by Tim Peters\n",
+      "\n",
+      "Beautiful is better than ugly.\n",
+      "Explicit is better than implicit.\n",
+      "Simple is better than complex.\n",
+      "Complex is better than complicated.\n",
+      "Flat is better than nested.\n",
+      "Sparse is better than dense.\n",
+      "Readability counts.\n",
+      "Special cases aren't special enough to break the rules.\n",
+      "Although practicality beats purity.\n",
+      "Errors should never pass silently.\n",
+      "Unless explicitly silenced.\n",
+      "In the face of ambiguity, refuse the temptation to guess.\n",
+      "There should be one-- and preferably only one --obvious way to do it.\n",
+      "Although that way may not be obvious at first unless you're Dutch.\n",
+      "Now is better than never.\n",
+      "Although never is often better than *right* now.\n",
+      "If the implementation is hard to explain, it's a bad idea.\n",
+      "If the implementation is easy to explain, it may be a good idea.\n",
+      "Namespaces are one honking great idea -- let's do more of those!\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "import this\n"
    ]
   },
   {
@@ -356,11 +585,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__builtins__',\n",
+       " '__cached__',\n",
+       " '__doc__',\n",
+       " '__file__',\n",
+       " '__loader__',\n",
+       " '__name__',\n",
+       " '__package__',\n",
+       " '__spec__',\n",
+       " 'is_prime',\n",
+       " 'say_hi',\n",
+       " 'sqrt']"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "dir(myutil)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__builtins__',\n",
+       " '__cached__',\n",
+       " '__doc__',\n",
+       " '__file__',\n",
+       " '__loader__',\n",
+       " '__name__',\n",
+       " '__package__',\n",
+       " '__spec__',\n",
+       " 'c',\n",
+       " 'd',\n",
+       " 'i',\n",
+       " 's']"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir(this)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'A': 'N',\n",
+       " 'B': 'O',\n",
+       " 'C': 'P',\n",
+       " 'D': 'Q',\n",
+       " 'E': 'R',\n",
+       " 'F': 'S',\n",
+       " 'G': 'T',\n",
+       " 'H': 'U',\n",
+       " 'I': 'V',\n",
+       " 'J': 'W',\n",
+       " 'K': 'X',\n",
+       " 'L': 'Y',\n",
+       " 'M': 'Z',\n",
+       " 'N': 'A',\n",
+       " 'O': 'B',\n",
+       " 'P': 'C',\n",
+       " 'Q': 'D',\n",
+       " 'R': 'E',\n",
+       " 'S': 'F',\n",
+       " 'T': 'G',\n",
+       " 'U': 'H',\n",
+       " 'V': 'I',\n",
+       " 'W': 'J',\n",
+       " 'X': 'K',\n",
+       " 'Y': 'L',\n",
+       " 'Z': 'M',\n",
+       " 'a': 'n',\n",
+       " 'b': 'o',\n",
+       " 'c': 'p',\n",
+       " 'd': 'q',\n",
+       " 'e': 'r',\n",
+       " 'f': 's',\n",
+       " 'g': 't',\n",
+       " 'h': 'u',\n",
+       " 'i': 'v',\n",
+       " 'j': 'w',\n",
+       " 'k': 'x',\n",
+       " 'l': 'y',\n",
+       " 'm': 'z',\n",
+       " 'n': 'a',\n",
+       " 'o': 'b',\n",
+       " 'p': 'c',\n",
+       " 'q': 'd',\n",
+       " 'r': 'e',\n",
+       " 's': 'f',\n",
+       " 't': 'g',\n",
+       " 'u': 'h',\n",
+       " 'v': 'i',\n",
+       " 'w': 'j',\n",
+       " 'x': 'k',\n",
+       " 'y': 'l',\n",
+       " 'z': 'm'}"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "this.c\n",
+    "this.d\n"
    ]
   },
   {
@@ -372,11 +725,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'myutil' has no attribute '__main__'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-66-88132b5aa8fb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmyutil\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__main__\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'myutil' has no attribute '__main__'"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "myutil.__main__"
    ]
   },
   {
